feat: add Instructor object and dynamic related courses rendering
- Created Instructor object to store instructor data (name, job, description, img)
- Added instructor property in course object to hold Instructor instances
- Commented out about-course HTML section temporarily
- Implemented renderRelatedCourses function to dynamically display courses from the same category as the current course

--- a/HTML/course.html
+++ b/HTML/course.html
@@ -40,16 +40,16 @@
         <div class="course-details-container">
           <div class="course-content">
             <!-- Course Overview -->
-            <div class="course-section">
-              <h2>Kurs Haqqında</h2>
+            <!-- <div class="course-section"> -->
+            <!-- <h2>Kurs Haqqında</h2>
               <p>
                 Bu kurs JavaScript proqramlaşdırma dilinin əsaslarından
                 başlayaraq müasir veb inkişaf texnologiyalarına qədər hər şeyi
                 əhatə edir. Kurs zamanı real layihələr üzərində işləyəcək,
                 praktiki bacarıqlar əldə edəcəksiniz.
-              </p>
+              </p> -->
 
-              <div class="course-features">
+            <!-- <div class="course-features">
                 <div class="feature-item">
                   <i class="fa-solid fa-check"></i>
                   <span>HTML, CSS və JavaScript əsasları</span>
@@ -70,8 +70,8 @@
                   <i class="fa-solid fa-check"></i>
                   <span>Sertifikat və karyera dəstəyi</span>
                 </div>
-              </div>
-            </div>
+              </div> -->
+            <!-- </div> -->
 
             <!-- Curriculum Section -->
             <div class="course-section">
@@ -169,23 +169,7 @@
             </div>
 
             <!-- Related Courses -->
-            <div class="related-courses">
-              <h3>Əlaqəli Kurslar</h3>
-              <div class="related-course-item">
-                <img src="/images/courses/inf.png" alt="HTML/CSS Kursu" />
-                <div class="related-course-info">
-                  <h4>HTML/CSS Fundamentals</h4>
-                  <span class="related-course-price">₼199</span>
-                </div>
-              </div>
-              <div class="related-course-item">
-                <img src="/images/courses/web.png" alt="React Kursu" />
-                <div class="related-course-info">
-                  <h4>React Advanced</h4>
-                  <span class="related-course-price">₼349</span>
-                </div>
-              </div>
-            </div>
+            <div class="related-courses"></div>
           </aside>
         </div>
       </section>
