feat: make About Instructor section dynamic
- Implemented renderAboutInstructor function
- Dynamically displays information of the current course's instructor

--- a/HTML/course.html
+++ b/HTML/course.html
@@ -82,37 +82,7 @@
             <!-- Instructor Section -->
             <div class="course-section">
               <h2>Müəllim Haqqında</h2>
-              <div class="instructor-profile">
-                <div class="instructor-avatar">
-                  <img
-                    src="/images/tutor_images/raulBayramov.jpg"
-                    alt="Raul Bayramov"
-                  />
-                </div>
-                <div class="instructor-info">
-                  <h3>Raul Bayramov</h3>
-                  <p class="instructor-title">Senior Frontend Developer</p>
-                  <p class="instructor-bio">
-                    5+ il təcrübəsi olan peşəkar veb developer. React, Vue.js və
-                    Node.js texnologiyalarında ekspert. 100+ tələbəyə müəllimlik
-                    etmişdir.
-                  </p>
-                  <!-- <div class="instructor-stats">
-                    <div class="stat-item">
-                      <span class="stat-number">5+</span>
-                      <span class="stat-label">İl təcrübə</span>
-                    </div>
-                    <div class="stat-item">
-                      <span class="stat-number">100+</span>
-                      <span class="stat-label">Tələbə</span>
-                    </div>
-                    <div class="stat-item">
-                      <span class="stat-number">4.9</span>
-                      <span class="stat-label">Reytinq</span>
-                    </div>
-                  </div> -->
-                </div>
-              </div>
+              <div class="instructor-profile"></div>
             </div>
           </div>
 
