style(hero): add background image and update styles
Added a background image to the hero section and applied several style adjustments for improved layout and visuals.

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -35,7 +35,7 @@
           </p>
         </div>
         <div class="about-hero__image">
-          <img src="/images/hero/hero_image2.png" alt="About eRBe" />
+          <img src="/images//eRBe Academy background.png" alt="About eRBe" />
         </div>
       </section>
 
@@ -52,7 +52,7 @@
             </div>
             <div class="value-card">
               <div class="icon"><i class="fa-solid fa-bullseye"></i></div>
-              <h3>M missiyamız</h3>
+              <h3>Missiyamız</h3>
               <p>
                 Praktiki dərslər, mentor dəstəyi və real layihələrlə
                 iştirakçılarımıza karyera mərkəzli bacarıqlar qazandırmaq.
@@ -74,12 +74,12 @@
 
       <section class="about-stats">
         <div class="container stats-grid">
-          <div class="stat">
+          <!-- <div class="stat">
             <span class="num">1500+</span>
             <span class="label">Məzun</span>
-          </div>
+          </div> -->
           <div class="stat">
-            <span class="num">30+</span>
+            <span class="num">20+</span>
             <span class="label">Aktiv Kurs</span>
           </div>
           <div class="stat">
