--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </div>
         </div>
       </section>
-      <section class="courses">
+      <section class="courses" id="courses">
         <div class="courses-head">
           <div class="courses-head-title">
             <h2>Kursları Kəşf edin</h2>
