--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -34,7 +34,7 @@
           </p>
         </div>
         <div class="contact-hero__image">
-          <img src="/images/hero/hero_ai.jpg" alt="Contact eRBe" />
+          <img src="/images/eRBe Academy background.png" alt="Contact eRBe" />
         </div>
       </section>
 
@@ -62,7 +62,12 @@
               </div>
               <div class="form-field">
                 <label for="message">Mesajınız</label>
-                <textarea id="message" name="message" rows="5" required></textarea>
+                <textarea
+                  id="message"
+                  name="message"
+                  rows="5"
+                  required
+                ></textarea>
               </div>
               <button type="submit" class="submit-btn">Göndər</button>
               <p class="form-success" id="form-success" hidden>
@@ -76,7 +81,9 @@
               <i class="fa-solid fa-envelope"></i>
               <div>
                 <span class="label">Email</span>
-                <a href="mailto:erbeacademy1@gmail.com">erbeacademy1@gmail.com</a>
+                <a href="mailto:erbeacademy1@gmail.com"
+                  >erbeacademy1@gmail.com</a
+                >
               </div>
             </div>
             <div class="info-item">
@@ -98,7 +105,7 @@
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d760.0000000000001!2d44.793!3d41.715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDFuNDInNTQuMCJOIDQ0wrA0NycyNC4wIkU!5e0!3m2!1sen!2sge!4v1700000000000"
                 width="100%"
                 height="280"
-                style="border:0;"
+                style="border: 0"
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
@@ -112,24 +119,29 @@
         <div class="container cta-box">
           <div class="cta-text">
             <h3>Birgə işləməyə hazırsınız?</h3>
-            <p>Qısa bir mesaj göndərin, ehtiyacınızı birlikdə müəyyənləşdirək.</p>
+            <p>
+              Qısa bir mesaj göndərin, ehtiyacınızı birlikdə müəyyənləşdirək.
+            </p>
           </div>
-          <a class="cta-btn" href="mailto:erbeacademy1@gmail.com">Email yazın</a>
+          <a class="cta-btn" href="mailto:erbeacademy1@gmail.com"
+            >Email yazın</a
+          >
         </div>
       </section>
     </main>
 
     <footer class="footer"></footer>
     <script src="/javascript/headerFiles/header.js" type="module"></script>
+    <script src="/javascript/footer.js" type="module"></script>
     <script>
       // Lightweight client-side success message; you can replace with backend later
-      document.getElementById('contact-form').addEventListener('submit', function (e) {
-        e.preventDefault();
-        document.getElementById('form-success').hidden = false;
-        this.reset();
-      });
+      document
+        .getElementById("contact-form")
+        .addEventListener("submit", function (e) {
+          e.preventDefault();
+          document.getElementById("form-success").hidden = false;
+          this.reset();
+        });
     </script>
   </body>
 </html>
-
-
