feat: added new schedule  for informatics course

--- a/HTML/header.html
+++ b/HTML/header.html
@@ -29,6 +29,9 @@
   </div>
 </nav>
 <div class="icons">
-  <i id="cart_icon" class="fa-solid fa-basket-shopping"></i>
+  <div style="position: relative; display: flex; align-items: center;">
+    <i id="cart_icon" class="fa-solid fa-basket-shopping"></i>
+    <span class="cart-badge" id="cart-badge" style="display: none;"></span>
+  </div>
   <i id="user_icon" class="fa-solid fa-circle-user"></i>
 </div>
