--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
       </section>
     </main>
     <footer class="footer"></footer>
+    <script src="/javascript/cart/cart-utilities.js" type="module"></script>
     <script src="/javascript/headerFiles/header.js" type="module"></script>
     <script src="/javascript/auth-files/auth-loader.js"></script>
     <script src="/javascript/mainSections/hero.js" type="module"></script>
